update report penjualan

--- a/src/main/resources/templates/td/td-report.html
+++ b/src/main/resources/templates/td/td-report.html
@@ -22,7 +22,9 @@
                 <td th:text="${report.user}"></td>
                 <td th:text="${report.total}"></td>
                 <td th:text="${report.date}"></td>
-<!--                <td th:text="${author.education}"></td>-->
+                <td th:text="${report.item}"></td>
+
+                <!--                <td th:text="${author.education}"></td>-->
             </tr>
             </tbody>
             <tfoot>
